--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@farcaster/auth-kit": "^0.2.2",
     "@hookform/resolvers": "^4.1.3",
+    "@openzeppelin/contracts": "^5.0.2",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-avatar": "^1.1.3",
