--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@farcaster/auth-kit": "^0.2.2",
+    "@genkit-ai/googleai": "^1.0.0",
     "@hookform/resolvers": "^4.1.3",
     "@openzeppelin/contracts": "^5.0.2",
     "@radix-ui/react-accordion": "^1.2.3",
@@ -37,9 +38,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.2.12",
+    "genkit": "^1.0.0",
     "jose": "^5.6.3",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -50,7 +53,8 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
