--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "framework": "nextjs",
   "buildCommand": "next build",
-  "outputDirectory": ".next",
-  "engines": {
-    "node": "20.x"
-  }
+  "outputDirectory": ".next"
 }
