--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
-  "engines": {
-    "node": "20.x"
-  },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.0",
     "@farcaster/auth-kit": "^0.2.2",
     "@genkit-ai/googleai": "^1.0.0",
     "@hookform/resolvers": "^3.9.0",
+    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -44,7 +43,7 @@
     "embla-carousel-react": "^8.1.6",
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.12",
-    "genkit": "^1.0.0",
+    "genkit": "^1.16.0",
     "jose": "^5.6.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
@@ -65,12 +64,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "overrides": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@farcaster/auth-kit": {
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1"
-    }
+  "engines": {
+    "node": "20.x"
   }
 }
