--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.3.0",
+    "@farcaster/auth-kit": "^0.2.2",
     "@genkit-ai/googleai": "^1.0.0",
     "@hookform/resolvers": "^3.9.0",
     "@opentelemetry/exporter-jaeger": "^1.25.1",
@@ -44,6 +45,7 @@
     "firebase": "^10.12.3",
     "framer-motion": "^11.2.12",
     "genkit": "^1.16.0",
+    "jose": "^5.6.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "react": "^18.3.1",
