--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
-
 {
-  "name": "nextn",
+  "name": "crypto-trivia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 9002",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "^1.3.0",
-    "@farcaster/auth-kit": "^0.2.2",
+    "@farcaster/auth-kit": "^0.3.0",
     "@genkit-ai/googleai": "^1.16.0",
     "@hookform/resolvers": "^3.9.0",
-    "@opentelemetry/exporter-jaeger": "^1.25.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
@@ -39,21 +33,18 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.6",
-    "firebase": "^10.12.3",
-    "framer-motion": "^11.2.12",
+    "framer-motion": "^11.3.17",
     "genkit": "^1.16.0",
     "jose": "^5.6.3",
-    "lucide-react": "^0.395.0",
-    "next": "14.2.4",
-    "react": "^18.3.1",
+    "lucide-react": "^0.414.0",
+    "next": "14.2.5",
+    "react": "^18",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "recharts": "^2.12.7",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
@@ -61,11 +52,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "engines": {
-    "node": "20.x"
   }
 }
