--- a/src/package.json
+++ b/src/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@farcaster/auth-kit": "^0.3.0",
-    "@genkit-ai/googleai": "^1.16.0",
+    "@genkit-ai/dotprompt": "1.17.1",
+    "@genkit-ai/googleai": "1.17.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -35,7 +36,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.6",
     "framer-motion": "^11.3.17",
-    "genkit": "^1.16.0",
+    "genkit": "1.17.1",
     "jose": "^5.6.3",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
