--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "recharts": "^2.12.7",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@google/generative-ai": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "^20",
