--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "jose": "^5.6.3",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "pako": "^2.1.0",
+    "buffer": "^6.0.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -52,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/pako": "^2.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
