--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.0",
     "zod": "^3.23.8",
-    "@google/generative-ai": "^0.15.0"
+    "@google/generative-ai": "^0.15.0",
+    "@farcaster/miniapp-sdk": "*"
   },
   "devDependencies": {
     "@types/node": "^20",
