--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "tailwindcss-animate": "^1.0.0",
     "zod": "^3.23.8",
     "@google/generative-ai": "^0.15.0",
-    "@farcaster/miniapp-sdk": "*"
+    "@farcaster/miniapp-sdk": "*",
+    "viem": "^2.17.10",
+    "wagmi": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
