--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
     "tailwindcss-animate": "^1.0.0",
     "zod": "^3.23.8",
     "@google/generative-ai": "^0.15.0",
-    "@farcaster/miniapp-sdk": "*",
-    "viem": "^2.17.10",
-    "wagmi": "^2.12.0"
+    "@farcaster/miniapp-sdk": "*"
   },
   "devDependencies": {
     "@types/node": "^20",
