me da estos errores en vercel

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.15.0",
     "@hookform/resolvers": "^3.9.0",
     "@privy-io/react-auth": "^1.66.0",
     "@radix-ui/react-accordion": "^1.2.0",
