Guardando cambios antes de volver al commit antiguo

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.15.0",
     "@hookform/resolvers": "^3.9.0",
-    "@privy-io/react-auth": "^1.66.0",
+    "@neynar/react": "0.4.9",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -32,8 +32,10 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@tanstack/react-query": "^5.51.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connectkit": "^1.7.4",
     "embla-carousel-react": "^8.1.6",
     "ethers": "^6.13.1",
     "framer-motion": "^11.3.17",
@@ -48,6 +50,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.0",
     "viem": "^2.17.3",
+    "wagmi": "^2.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
