--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@farcaster/miniapp-sdk": "0.1.0",
+    "@farcaster/auth-kit": "^0.2.2",
     "@google/generative-ai": "^0.15.0",
     "@hookform/resolvers": "^3.9.0",
+    "@neynar/nodejs-sdk": "^1.26.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -26,6 +27,7 @@
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
+    "react-hot-toast": "^2.4.1",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
