--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "pino-pretty": "^10.2.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
