--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "pino-pretty": "^10.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "pino-pretty": "^10.2.0"
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.0.0"
